src/test/ui/hrtb/hrtb-conflate-regions.stderr
error: implementation of `Foo` is not general enough
  --> $DIR/hrtb-conflate-regions.rs:28:10
   |
LL | fn b() { want_foo2::<SomeStruct>(); } //~ ERROR
   |          ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Due to a where-clause on `want_foo2`,
   = note: `Foo<(&'0 isize, &'1 isize)>` would have to be implemented for the type `SomeStruct`, for any two lifetimes `'0` and `'1`
   = note: but `Foo<(&'2 isize, &'2 isize)>` is actually implemented for the type `SomeStruct`, for some lifetime `'2`

error: aborting due to previous error

